# topiary

./: .gitignore  .travis.yml  AGENTS.md  CHANGELOG.md  README.md  RELEASING.md  deploy.sh  lint.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.sh
docs/: antigens.md  api.md  cached.md  expression-semantics.md  fragments.md  index.md  properties.md  pvacseq.md  quickstart.md  ranking.md  self_proteome.md
scripts/: topiary  topiary-analyze-cohort
test/: cli_helpers.py  data.py  test.py  test_args_outputs.py  test_cli_console_script.py  test_cli_epitopes.py  test_cli_outputs.py  test_cli_protein_changes.py  test_dataframe.py  test_effect_expression_filters.py  test_epitope_filters.py  test_epitopes_from_commandline_args.py  test_lazy_ligandome_dict.py  test_load_cufflinks_fpkm.py  test_mutant_epitope_predictions_class1.py  test_mutant_epitope_predictions_class2.py  test_mutant_epitope_predictor.py  test_mutant_epitope_predictor_class1.py  test_mutant_epitope_predictor_class2.py  test_parsing_helpers.py  test_peptide_mutation_interval.py  test_rna_helpers.py  test_variant_expression_filters.py
tests/: common.py  data.py  test_antigen.py  test_args_outputs.py  test_best_allele.py  test_cached_predictor.py  test_cli_cached_predictor.py  test_cli_coverage.py  test_cli_protein_changes.py  test_cli_ranking.py  test_cli_script.py  test_combine_predictor_results.py  test_contains_mutant_residues.py  test_coverage_gaps.py  test_dataframe.py  test_deploy_script.py  test_direct_input_regressions.py  test_dsl_extensions.py  test_dsl_polish.py  test_end_to_end.py  (+36 more)
(+98 files in other folders)
